base/android/java/src/org/chromium/base/PathUtils.java
@@ -263,13 +263,4 @@ public abstract class PathUtils {
     public static String getExternalStorageDirectory() {
         return Environment.getExternalStorageDirectory().getAbsolutePath();
     }
-
-    /**
-     * @ return the path to the base apk.
-     */
-    @SuppressWarnings("unused")
-    @CalledByNative
-    public static String getPathToBaseApk() {
-      return ContextUtils.getApplicationContext().getApplicationInfo().sourceDir;
-    }
 }
